fixed issues on smaller screens, added deleteAll

--- a/src/Home/styles.css
+++ b/src/Home/styles.css
@@ -59,9 +59,25 @@
     background-color: rgb(3, 40, 143);
 }
 
+.clear-all-button {
+    width: 50%;
+    max-width: 1400px;
+    background-color: red;
+    color: white;
+    border-radius: 5px;
+    height: 2rem;
+    border: none;
+    font-size: 17px;
+    margin: auto;
+}
+
+.clear-all-button:hover {
+    background-color: rgb(145, 0, 0);
+}
+
 
 .logout-btn {
-    width: 6rem;
+    width: 7rem;
     height: 2rem;
     background-color: darkcyan;
     border-radius: 5px;
@@ -75,8 +91,12 @@
 }
 
 .welcome-div {
-    padding-left: 2rem;
+    padding: 0 2rem 0 2rem;
     font-weight: bold;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
 }
 
 .calendar-div {
@@ -147,20 +167,28 @@
     align-items: center;
   }
 
+
   .help-modal {
-    position: fixed;
-    z-index: 1000;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
     width: 560px;
-    height: 900px;
-    margin: auto;
+    height: 890px;
     border: 2px solid teal;
     background-color: ghostwhite;
     border-radius: 5px;
     padding: 0 1rem 0 1rem;
+    overflow-y: auto;
+  }
+
+  .help-modal-container {
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .help-h4 {
